fix(style): improve sidebar behavior on mobile devices

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,6 +10,7 @@ body,
 #__nuxt,
 #__layout {
   height: 100%;
+  overflow-x: hidden;
 }
 
 body {
